# some-rng

./: .Procfile  .gitignore  Dockerfile  README.md  bla  blarg.json  goodhs.json  package.json
coinflip-ui/: .env  README.md  matchesold  package-lock.json  package.json
notmerge2/: package.json
pending/: 1656531254616
reveal-worker-express/: .Procfile  .ammanrc.cjs  3.json  4i.json  badBlas.json  blabla.json  blarg.json  id.json  idhydra.json  package-lock.json  package.json  readme.md  seed.json  tsconfig.json
rng-service/: .gitignore  Anchor.toml  README.md  airdropping.sh  operator.json  package-lock.json  package.json  this_goes_in_target_deploy_puppet_master-keypair.json  throwaway.json
rng-service/programs/puppet-master/: Cargo.toml
rng-service/programs/puppet-master/src/: constants.rs  errors.rs  lib.rs  myaccounts.rs
rng-service/programs/puppet-master/src/constants/: mod.rs  seeds.rs  sizes.rs
rng-service/programs/puppet-master/src/errors/: errorcodes.rs  mod.rs
rng-service/programs/puppet-master/src/games/: dice.rs  flipcoin.rs  mod.rs
rng-service/programs/puppet-master/src/instructions/: author_fee_withdraw.rs  create_house.rs  initialize.rs  mod.rs  operator_fee_withdraw.rs  operator_treasury_withdraw.rs  pull_strings.rs  uncover.rs
rng-service/programs/puppet-master/src/structs/: data.rs  house.rs  mod.rs
rng-service/programs/puppet-master/src/utils/: assert.rs  create_or_allocate_account_raw.rs  create_program_token_account_if_not_present.rs  hashing.rs  make_ata.rs  mod.rs  seeds.rs  transfer.rs
src/: template.html
src/js/: Main.js  (+5 more)
(+122 files in other folders)
