[package]
name = "puppet-master"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "puppet_master"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
arrayref = "0.3.6"
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
spl-token = { version = "3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
